--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "domain": "reolink_recordings",
   "name": "Reolink Recordings",
-  "documentation": "https://github.com/yourusername/reolink_recordings",
-  "dependencies": ["reolink", "cast"],
-  "codeowners": ["@yourusername"],
+  "documentation": "https://github.com/rcourtna/reolink_recordings",
+  "dependencies": ["reolink"],
+  "codeowners": ["@rcourtna"],
   "config_flow": true,
   "iot_class": "local_polling",
   "version": "0.1.0",
